--- a/api_yamdb/requirements.txt
+++ b/api_yamdb/requirements.txt
@@ -9,5 +9,7 @@ PyJWT==2.1.0
 pytz==2020.1
 djoser
 sqlparse==0.3.1
+pytest==6.2.4
+pytest-pythonpath==0.7.3
+python-dotenv==0.19.0
 pytest-django==4.4.0
-python-dotenv
